fixed overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,7 @@ body {
 .body{
   overflow: hidden !important;
 }
+
+.mat-drawer-content{
+  overflow-x: hidden !important;
+}
